--- a/webapp/view/tracking-processos-home.view.xml
+++ b/webapp/view/tracking-processos-home.view.xml
@@ -1,14 +1,17 @@
 <mvc:View
     controllerName="com.brf.trackingprocessos.trackingprocessosfrontend.controller.tracking-processos-home"
     xmlns:mvc="sap.ui.core.mvc"
+	xmlns:core="sap.ui.core"
     displayBlock="true"
     xmlns="sap.m"
 >
 	<Shell id="shell">
 		<App id="app">
 			<pages>
-				<Page id="page" title="{i18n>title}">
-					<content />
+				<Page id="page" title="{i18n>title}" showTitle="false">
+					<content>
+						<core:Fragment fragmentName="com.brf.trackingprocessos.trackingprocessosfrontend.view.tracking-processos-mainlist" type="XML"/>
+					</content>
 				</Page>
 			</pages>
 		</App>
